<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_quality" app:iconSpaceReserved="false" />
    <ListPreference android:defaultValue="saved" android:entries="@array/playerQualityEntries" android:entryValues="@array/playerQualityValues" android:key="player_defaultquality" android:summary="%s" android:title="@string/player_defaultquality" app:iconSpaceReserved="false" />
    <ListPreference android:defaultValue="saved" android:entries="@array/playerQualityEntries" android:entryValues="@array/playerQualityValues" android:key="player_default_cellular_quality" android:summary="%s" android:title="@string/settings_mobile_data_quality" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="player_low_latency" android:summary="@string/settings_low_latency_summary" android:title="@string/settings_low_latency" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="player_live_rewind" android:summary="@string/settings_live_rewind_summary" android:title="@string/settings_live_rewind" app:iconSpaceReserved="false" />

    <PreferenceCategory android:key="live_caption_settings" android:title="@string/live_caption_settings" app:iconSpaceReserved="false">
        <Preference android:selectable="false" android:summary="@string/live_caption_settings_summary" app:iconSpaceReserved="false" />
        <ListPreference android:defaultValue="2000" android:entries="@array/liveCaptionIntervalEntries" android:entryValues="@array/liveCaptionIntervalValues" android:key="player_live_caption_partial_interval_ms" android:summary="%s" android:title="@string/live_caption_processing_interval" app:iconSpaceReserved="false" />
        <SeekBarPreference android:defaultValue="1250" android:key="player_live_caption_presentation_delay_ms" android:max="2000" android:summary="@string/live_caption_presentation_delay_summary" android:title="@string/live_caption_presentation_delay" app:iconSpaceReserved="false" app:seekBarIncrement="250" app:showSeekBarValue="true" />
        <EditTextPreference android:defaultValue="0.0" android:key="player_live_caption_text_offset_seconds" android:summary="@string/live_caption_text_offset_description" android:title="@string/live_caption_text_offset" app:iconSpaceReserved="false" />
        <ListPreference android:defaultValue="black" android:entries="@array/liveCaptionBackgroundEntries" android:entryValues="@array/liveCaptionBackgroundValues" android:key="player_live_caption_background" android:summary="%s" android:title="@string/live_caption_background" app:iconSpaceReserved="false" />
        <EditTextPreference android:defaultValue="#000000" android:key="player_live_caption_background_color" android:summary="@string/live_caption_custom_color_summary" android:title="@string/live_caption_custom_color" app:iconSpaceReserved="false" />
        <EditTextPreference android:defaultValue="#FFFFFF" android:key="player_live_caption_text_color" android:summary="@string/live_caption_text_color_summary" android:title="@string/live_caption_text_color" app:iconSpaceReserved="false" />
        <Preference android:key="player_live_caption_reset_position" android:summary="@string/live_caption_position_reset_summary" android:title="@string/live_caption_position_reset" app:iconSpaceReserved="false" />
        <ListPreference android:defaultValue="sans-serif" android:entries="@array/settingsFontEntries" android:entryValues="@array/settingsFontValues" android:key="player_live_caption_font" android:summary="%s" android:title="@string/live_caption_font" app:iconSpaceReserved="false" />
        <SeekBarPreference android:defaultValue="18" android:key="player_live_caption_font_size" android:max="30" android:title="@string/live_caption_font_size" app:iconSpaceReserved="false" app:min="12" app:showSeekBarValue="true" />
        <ListPreference android:defaultValue="auto" android:entries="@array/liveCaptionWidthEntries" android:entryValues="@array/liveCaptionWidthValues" android:key="player_live_caption_width" android:summary="%s" android:title="@string/live_caption_width" app:iconSpaceReserved="false" />
        <SeekBarPreference android:defaultValue="100" android:key="player_live_caption_opacity" android:max="100" android:title="@string/live_caption_opacity" app:iconSpaceReserved="false" app:min="20" app:showSeekBarValue="true" />
        <ListPreference android:defaultValue="250" android:entries="@array/liveCaptionAnimationEntries" android:entryValues="@array/liveCaptionAnimationValues" android:key="player_live_caption_animation_ms" android:summary="%s" android:title="@string/live_caption_animation" app:iconSpaceReserved="false" />
        <SeekBarPreference android:defaultValue="3" android:key="player_live_caption_hold_seconds" android:max="8" android:summary="@string/live_caption_hold_summary" android:title="@string/live_caption_hold" app:iconSpaceReserved="false" app:min="1" app:showSeekBarValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_background_playback" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="player_picture_in_picture" android:summary="@string/picture_in_picture_summary" android:title="@string/picture_in_picture" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="settings_background_playback" android:summary="@string/settings_background_playback_summary" android:title="@string/settings_background_playback" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:dependency="settings_background_playback" android:key="player_keep_playing_after_task_removed" android:summary="@string/keep_playing_after_task_removed_summary" android:title="@string/settings_continue_after_closing" app:iconSpaceReserved="false" />

    <PreferenceCategory android:title="@string/settings_playback_behavior" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="player_auto_recover_streams" android:summary="@string/settings_recover_streams_summary" android:title="@string/settings_recover_streams" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="player_avoid_ads" android:summary="@string/settings_alternate_streams_summary" android:title="@string/settings_alternate_streams" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:dependency="player_avoid_ads" android:key="player_hide_ads" android:summary="@string/settings_hide_switching_summary" android:title="@string/settings_hide_switching" app:iconSpaceReserved="false" />

    <PreferenceCategory android:title="@string/settings_watch_history" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="player_use_videopositions" android:summary="@string/settings_remember_position_summary" android:title="@string/settings_remember_position" app:iconSpaceReserved="false" />
    <Preference android:key="delete_video_positions" android:title="@string/settings_clear_positions" app:iconSpaceReserved="false" />
</androidx.preference.PreferenceScreen>
