<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_general_notifications"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="live_notifications_enabled"
        android:title="@string/live_notifications"
        android:summary="@string/live_notifications_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/watch_streak_protection_category"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="watch_streak_protection_enabled"
        android:title="@string/watch_streak_protection"
        android:summary="@string/watch_streak_protection_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="1"
        android:dependency="watch_streak_protection_enabled"
        android:dialogTitle="@string/watch_streak_minimum_title"
        android:key="watch_streak_minimum"
        android:title="@string/watch_streak_minimum_title"
        android:summary="@string/watch_streak_minimum_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="live_notifications_troubleshooting"
        android:title="@string/live_notifications_troubleshooting_title"
        android:summary="@string/live_notifications_troubleshooting_summary"
        android:selectable="false"
        app:isPreferenceVisible="false"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_activate_notifications_when_following"
        android:title="@string/activate_notifications_when_following"
        android:summary="@string/live_notifications_following_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="battery"
        android:entries="@array/liveNotificationModeEntries"
        android:entryValues="@array/liveNotificationModeValues"
        android:key="live_notifications_mode"
        android:summary="%s"
        android:title="@string/live_notifications_mode_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="live_notifications_service_notification"
        android:title="@string/live_notifications_service_notification_title"
        android:summary="@string/live_notifications_service_notification_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="live_notifications_battery_optimization"
        android:title="@string/live_notifications_battery_optimization_title"
        android:summary="@string/live_notifications_battery_optimization_summary"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory android:title="@string/settings_rich_live_notifications" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="live_notification_rich_content" android:title="@string/settings_rich_live_notifications" android:summary="@string/settings_rich_live_notifications_summary" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:dependency="live_notification_rich_content" android:key="live_notification_show_preview" android:title="@string/settings_live_notification_preview" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:dependency="live_notification_rich_content" android:key="live_notification_show_avatar" android:title="@string/settings_live_notification_avatar" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:dependency="live_notification_rich_content" android:key="live_notification_show_title" android:title="@string/settings_live_notification_title" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:dependency="live_notification_rich_content" android:key="live_notification_show_category" android:title="@string/settings_live_notification_category" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="false" android:dependency="live_notification_rich_content" android:key="live_notification_show_viewers" android:title="@string/settings_live_notification_viewers" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:dependency="live_notification_rich_content" android:key="live_notification_preview_metered" android:title="@string/settings_live_notification_preview_metered" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="live_notification_watch_action" android:title="@string/settings_live_notification_watch_action" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="live_notification_chat_action" android:title="@string/settings_live_notification_chat_action" app:iconSpaceReserved="false" />

    <PreferenceCategory android:title="@string/settings_live_activities" app:iconSpaceReserved="false" />
    <Preference android:key="prediction_live_updates_page" android:title="@string/prediction_live_updates" android:summary="@string/prediction_live_updates_summary" app:iconSpaceReserved="false" />
    <Preference android:key="drops_live_updates_page" android:title="@string/drops_live_updates" android:summary="@string/drops_live_updates_summary" app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
