<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat android:defaultValue="true" android:key="chat_show_usernotice" android:title="@string/show_usernotice" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="chat_show_clearmsg" android:title="@string/show_clearmsg" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="chat_show_clearchat" android:title="@string/show_clearchat" app:iconSpaceReserved="false" />
    <ListPreference android:defaultValue="notice" android:entries="@array/chatModerationDisplayEntries" android:entryValues="@array/chatModerationDisplayValues" android:key="chat_moderation_display" android:summary="%s" android:title="@string/chat_moderation_display" app:iconSpaceReserved="false" />
    <com.github.andreyasadchy.xtra.ui.settings.ChatModerationDisplayPreviewPreference android:key="chat_moderation_display_preview" android:summary="@string/chat_moderation_preview_summary" android:title="@string/chat_moderation_display_preview_title" app:iconSpaceReserved="false" />
    <ListPreference android:defaultValue="0" android:entries="@array/chatFirstMsgEntries" android:entryValues="@array/miscValues" android:key="chat_firstmsg_visibility" android:summary="%s" android:title="@string/chat_firstmsg_visibility" app:iconSpaceReserved="false" />
    <ListPreference android:defaultValue="tap" android:entries="@array/chatProfilePopoutGestureEntries" android:entryValues="@array/chatProfilePopoutGestureValues" android:key="chat_profile_popout_gesture" android:summary="%s" android:title="@string/chat_profile_popout_gesture" app:iconSpaceReserved="false" />
    <PreferenceCategory android:title="@string/settings_user_card_category" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="ui_user_card_show_account_created" android:summary="@string/settings_user_card_account_created_summary" android:title="@string/settings_user_card_account_created" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="ui_user_card_show_followed_since" android:summary="@string/settings_user_card_followed_since_summary" android:title="@string/settings_user_card_followed_since" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="ui_user_card_show_subscription" android:summary="@string/settings_user_card_subscription_summary" android:title="@string/settings_user_card_subscription" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="false" android:key="ui_user_card_show_roles" android:summary="@string/settings_user_card_roles_summary" android:title="@string/settings_user_card_roles" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="false" android:key="ui_user_card_show_last_broadcast" android:summary="@string/settings_user_card_last_broadcast_summary" android:title="@string/settings_user_card_last_broadcast" app:iconSpaceReserved="false" />
    <ListPreference android:defaultValue="large" android:entries="@array/chatGifDisplayEntries" android:entryValues="@array/chatGifDisplayValues" android:key="chat_gif_display" android:summary="%s" android:title="@string/chat_gif_display" app:iconSpaceReserved="false" />
    <SwitchPreferenceCompat android:defaultValue="true" android:key="chat_system_message_emotes" android:title="@string/show_system_message_emotes" app:iconSpaceReserved="false" />
</androidx.preference.PreferenceScreen>
